--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@svgr/webpack": "^5.5.0",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "rxjs": "^6.6.3",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
