--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.0.0",
     "@svgr/webpack": "^5.5.0",
     "next": "10.0.4",
+    "next-pwa": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rxjs": "^6.6.3",
