--- a/public/manifest.json
+++ b/public/manifest.json
@@ -88,7 +88,7 @@
       "purpose": "maskable"
     },
     {
-      "src": "/maskable-logo.png",
+      "src": "/images/maskable-logo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
